--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,8 @@
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
     --radius: 0.5rem;
+    --icon-color: black;
+  
   }
   .dark {
     --background: 240 10% 3.9%;
@@ -45,6 +47,7 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
+    --icon-color: white;
   }
 }
  
